# MacOS-Universal-Updator

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  run.py  setup_dev.sh  uninstall.sh  update_system.sh
scripts/: run_scheduled.py
src/updater/: __init__.py  app.py  cli.py
src/updater/config/: __init__.py  schedule.py  settings.py
src/updater/managers/: __init__.py  appstore.py  base.py  homebrew.py  macos.py  npm.py  pip.py
src/updater/ui/: __init__.py  dashboard.py  history.py  schedule.py  settings.py  updates.py
src/updater/utils/: __init__.py  logging.py  notifications.py  system.py
test_venv/: pyvenv.cfg
